Change Db to Postgres

--- a/BlogProjectMVC/appsettings.json
+++ b/BlogProjectMVC/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=BlogProject;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=.;Database=BlogProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=localhost; Port=5432; Database=BlogProjectMVC; User Id=postgres; Password=postgrePazz123"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
